--- a/a/4/index.html
+++ b/a/4/index.html
@@ -1,7 +1,7 @@
 <body bgcolor=#e6d0bd>
     <select id="room_choice">
         <option value="scene">scene</option>
-        <option value="human">3d scene</option>
+        <option value="spline">spline</option>
     </select>
     <dev id=buttons>
     </dev>
@@ -58,8 +58,8 @@
     <script src=js/lib3D2.js></script>
     <script src=js/matrix.js></script>
     <script src=js/line.js></script>
-    <script src=js/human.js></script>
     <script src=js/scene0.js></script>
+    <script src=js/spline.js></script>
     <script src=js/scene.js></script>
     
     <SCRIPT>
